# RagSwift

./: .gitignore  2026-04-19-123914-phase1-retrieval.txt  2026-04-19-141836-phase1_generation2.txt  2026-05-03-135119-phase1_frontend1.txt  CLAUDE.md  Untitled  main.py  pyproject.toml  test_retrieval.py  the_road_less_travelled.epub
.claude/: settings.local.json
backend/: test.py  test_retrieval1.py
backend/app/: config.py  db.py  errors.py  main.py  sse.py
backend/app/api/: chats.py  documents.py
backend/app/generation/: __init__.py  generate.py
backend/app/ingestion/: chunk.py  embed.py  index.py  parse.py  pipeline.py
backend/app/models/: chat.py  document.py  retrieval.py
backend/app/observability/: langsmith.py
backend/app/retrieval/: __init__.py  bm25.py  constants.py  fusion.py  retrieve.py  rewrite.py  semantic.py
backend/tests/: test_fusion.py  test_retrieve_p2.py
eval/: run_eval.py  testset.json
frontend/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: chat-area.tsx  chat-sidebar.tsx  chat-view.tsx  document-panel.tsx  ingestion-card.tsx  message.tsx  sidebar.tsx  trace-panel.tsx  upload-panel.tsx
frontend/lib/: api.ts  sse.ts  store.ts  types.ts
frontend/types/: index.ts
prompts/: generation.txt  rewrite.txt
specs/: api.md  frontend.md  generation.md  ingestion.md  retrieval.md
